# caffe2

./: .gitmodules  CMakeLists.txt  appveyor.yml
caffe2/: :  CMakeLists.txt
caffe2/binaries/: CMakeLists.txt  print_registered_core_operators.cc
caffe2/contrib/: CMakeLists.txt
caffe2/contrib/aten/: CMakeLists.txt
caffe2/contrib/prof/: CMakeLists.txt
caffe2/core/: blob.h  blob_test.cc  context.h  flags.cc  flags.h  logging.cc  logging.h  macros.h.in  net.h  net_dag.cc  net_dag.h  net_simple.cc  net_simple.h  net_test.cc  observer_test.cc  operator.cc  operator.h  operator_test.cc  plan_executor.h  predictor.cc  predictor.h  predictor_test.cc  tensor.cc  tensor.h  workspace.cc  workspace.h
caffe2/db/: CMakeLists.txt
caffe2/distributed/: CMakeLists.txt
caffe2/mobile/contrib/: CMakeLists.txt
caffe2/operators/: abs_op.cc  accumulate_op.cc  accuracy_op.cc  apmeter_op.cc  atomic_ops.cc  batch_box_cox_op.cc  batch_gather_ops.cc  batch_gather_ops.h  batch_matmul_op.cc  batch_sparse_to_dense_op.cc  bbox_transform_op.cc  boolean_mask_ops.cc  boolean_unmask_ops.cc  box_with_nms_limit_op.cc  cast_op.cc  ceil_op.cc  channel_backprop_stats_op.cc  channel_shuffle_op.cc  channel_stats_op.cc  clip_op.cc  clip_op.h  communicator_op.cc  concat_split_op.cc  conditional_op.cc  conv_gradient_op.cc  conv_op.h  conv_op_impl.h  conv_transpose_gradient_op.cc  conv_transpose_op.h  conv_transpose_op_impl.h  cos_op.cc  cosine_embedding_criterion_op.cc  counter_ops.cc  create_scope_op.cc  cross_entropy_op.cc  dataset_ops.cc  deform_conv_gradient_op.cc  distance_op.cc  dropout_op.cc  dropout_op.h  (+152 more)
caffe2/sgd/: CMakeLists.txt
caffe2/share/: CMakeLists.txt
caffe2/share/contrib/: CMakeLists.txt
caffe2/share/contrib/binaries/caffe2_benchmark/: caffe2_benchmark.cc
caffe2/utils/: CMakeLists.txt  cast.h  proto_utils.cc  proto_utils.h
cmake/: Caffe2Config.cmake.in  Dependencies.cmake  MiscCheck.cmake  ProtoBuf.cmake  Summary.cmake
docs/: README.md  installation.md
modules/: CMakeLists.txt
scripts/appveyor/: install.bat
